--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next dev",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.2",
-    "chart.js": "^3.9.1",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-chartjs-2": "^4.3.1",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "chart.js": "^3.3.2",
+    "next": "10.2.3",
+    "next-images": "^1.7.0",
+    "react": "17.0.2",
+    "react-chartjs-2": "^3.0.3",
+    "react-dom": "17.0.2",
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
-    "sass": "^1.55.0"
+    "eslint-config-next": "12.3.1"
   }
 }
